force-app/main/default/objects/WL_User__c/WL_User__c.object-meta.xml
<CustomObject>
    <description>User용 Custom Object</description>
    <label>WL_User</label>
    <nameField>
        <label>WL_SalesPerson</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WL_Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>