force-app/main/default/objects/WL_User__c/fields/ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalKey__c</fullName>
    <externalId>true</externalId>
    <label>ExternalKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>