force-app/main/default/objects/WL_User__c/fields/WL_Store__c.field-meta.xml
<CustomField>
    <fullName>WL_Store__c</fullName>
    <label>WL_Store</label>
    <referenceTo>WL_Store__c</referenceTo>
    <relationshipLabel>WL_Users</relationshipLabel>
    <relationshipName>WL_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>